UX: temp fix for multiple dates on mobile

--- a/assets/stylesheets/mobile/discourse-post-event.scss
+++ b/assets/stylesheets/mobile/discourse-post-event.scss
@@ -1,2 +1,5 @@
 .discourse-post-event {
+  .event-dates .date {
+    max-width: 75vw;
+  }
 }
